--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "es6-promise": "^4.2.5",
     "html2canvas": "^1.0.0",
-    "html2canvas-pro": "^1.5.0",
+    "html2canvas-pro": "github:daniel-rubicon/html2canvas-pro",
     "jspdf": "^2.3.1"
   },
   "devDependencies": {
